# fusion

./: .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE.md  README.md  SPEC.md  install.ps1  install.sh  ruff.toml
.github/workflows/: ci.yml  release.yml
cli/: .gitignore  README.md  hatch_build.py  pyproject.toml
cli/src/fusion/: __init__.py  bucket.py  checker.py  cli.py  document.py  hub.py  indexer.py  ledger.py  manifest.py  scaffold.py  setup.py  update.py  views.py
cli/tests/: conftest.py  test_build_payload.py  test_checker_errors.py  test_checker_warnings.py  test_cli.py  test_cli_encoding.py  test_cli_setup.py  test_cli_update.py  test_cli_version.py  test_document.py  test_hub_bucket.py  test_indexer.py  test_ledger.py  test_line_endings.py  test_roundtrip.py  test_scaffold.py  test_setup_agents.py  test_setup_core.py  test_skill_family.py  test_views.py
craft/: ADR.md  PLAN.md  SPEC.md
docs/: BUCKETS-EVERYWHERE.md  GETTING-STARTED.md  README.md  ROADMAP.md
docs/acceptance/: 2026-07-10-phase-3-intake.md  2026-07-10-phase-3-librarian.md  2026-07-10-phase-3-planner-analyst.md  2026-07-10-phase-4-install.md
docs/dogfood/: 2026-07-protocol.md  frictions.md
docs/plans/: 2026-07-10-documentation-a-plus.md  2026-07-10-dogfood-capabilities.md  2026-07-10-installer.md  2026-07-10-phase-1-foundation.md  2026-07-10-phase-2-cli.md  2026-07-10-phase-3-skills.md  2026-07-10-phase-4-release.md  2026-07-10-reflection-cli-fixes.md  2026-07-11-bucket-scenarios.md  2026-07-11-setup-registry-fix.md  2026-07-12-friction-improvements.md
docs/specs/: 2026-07-10-fusion-design.md  2026-07-10-installer-design.md  2026-07-11-fusion-update-design.md
examples/: README.md
examples/crazy-ones/: BUCKET.md  (+2 more)
skills/: README.md
(+44 files in other folders)
