[project]
name = "fusion-cli"
version = "1.4.0"
description = "The Fusion reference CLI — the notary of the Fusion Convention."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Bluewaves Boutique" }]
dependencies = ["pyyaml>=6.0"]

[project.scripts]
fusion = "fusion.cli:main_entry"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fusion"]
artifacts = ["src/fusion/_skills"]

[tool.hatch.build.targets.wheel.hooks.custom]
path = "hatch_build.py"

[tool.hatch.build.targets.sdist.hooks.custom]
path = "hatch_build.py"

[dependency-groups]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
