[project]
name = "fusion-cli"
version = "1.4.1"
description = "The Fusion reference CLI — the notary of the Fusion Convention."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Bluewaves Boutique" }]
dependencies = ["pyyaml>=6.0"]

[project.scripts]
fusion = "fusion.cli:main_entry"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fusion"]
artifacts = ["src/fusion/_skills"]

[tool.hatch.build.targets.wheel.hooks.custom]
path = "hatch_build.py"

[tool.hatch.build.targets.sdist.hooks.custom]
path = "hatch_build.py"

[dependency-groups]
dev = [
    "mypy>=2.3.0",
    "pytest>=8.0",
    "ruff>=0.15.22",
    "types-pyyaml>=6.0.12.20260518",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
files = ["src/fusion"]
strict = true
